--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "autoprefixer": "^10.4.21",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
-    "next": "15.4.6",
+    "next": "^16.1.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
